--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,3 +12,8 @@ jobs:
         run: |
           node --version
           npm -v
+      - name: python command (altshell)
+        run: |
+          import platform
+          print(platform.processor())
+        shell: python
